--- a/Strázsa tanya/index.html
+++ b/Strázsa tanya/index.html
@@ -22,18 +22,18 @@
         <div class="header-inner">
             <!-- logo -->
             <div class="header-logo">
-            <a href="../Strázsa tanya/room/asya.html"> <img src="img/strazsatanyamini-removebg-preview.png" alt="strazsa-logo"></a>
+            <a href="../room/asya.html"> <img src="img/strazsatanyamini-removebg-preview.png" alt="strazsa-logo"></a>
         </div>
         <nav class="nav">
-            <a class="nav-link" href="../Strázsa tanya/blog.html">Blog</a>
+            <a class="nav-link" href="../blog.html">Blog</a>
             <a class="nav-link" href="lakok.html">Lakók</a>
             <a class="nav-link" href="#">Műhely</a>
         </nav>
 
         <div class="menu-bar">
-            <ul><span class="hu-style"> HU</span> <img class="flag" src="../Strázsa tanya/img/hungary-flagezgif-4-999e636196.png" alt="">
+            <ul><span class="hu-style"> HU</span> <img class="flag" src="../img/hungary-flagezgif-4-999e636196.png" alt="">
                 <div class="submenu1">
-                <li> <a class="ua-link" href="../Strázsa tanya/index-ua.html"> <span class="ua-style">UA</span> <img class="flag" src="../Strázsa tanya/img/ukraineezgif-4-ab5a62bd88.png" alt="" srcset=""></a>
+                <li> <a class="ua-link" href="../index-ua.html"> <span class="ua-style">UA</span> <img class="flag" src="../Strázsa tanya/img/ukraineezgif-4-ab5a62bd88.png" alt="" srcset=""></a>
                 </li>
             </div>
 
